--- a/LocationModifier2/LocationModifier2.csproj
+++ b/LocationModifier2/LocationModifier2.csproj
@@ -56,6 +56,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Dialogs\LocationSelection.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dialogs\PacksizeSelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -71,6 +75,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Dialogs\LocationSelection.xaml.cs">
+      <DependentUpon>LocationSelection.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\PacksizeSelector.xaml.cs">
       <DependentUpon>PacksizeSelector.xaml</DependentUpon>
